Add server/client test applications